Fix tooltips on mobile

--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ body {
   content: attr(data-title);
   position: absolute;
   top: calc(100% + var(--border-width));
-  left: calc(50% - 80px);
-  right: calc(50% - 80px);
+  left: 0;
+  right: 0;
   border-radius: 0.5rem;
   border: var(--border);
   padding: 0.5rem;
@@ -179,6 +179,11 @@ nav a {
   nav a {
     min-width: 100px;
     border-radius: 0.5rem;
+  }
+
+  nav a[data-title]:hover::after {
+    left: calc(50% - 80px);
+    right: calc(50% - 80px);
   }
 }
 
